--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.27.0
   firebase_auth: ^4.19.0
+  email_validator: ^2.1.17
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
