- Implemented dark and light theme - Implemented new home view with HeatMap - Re-design home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   firebase_auth: ^4.19.0
   email_validator: ^2.1.17
   google_sign_in: ^6.2.1
+  provider: ^6.1.2
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.2
+  flutter_slidable: ^3.1.0
+  flutter_heatmap_calendar: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.2
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
