--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.1.2
   flutter_slidable: ^3.1.0
   flutter_heatmap_calendar: ^1.0.5
+  cloud_firestore: ^4.16.0
 
 dev_dependencies:
   flutter_test:
