--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_slidable: ^3.1.0
   flutter_heatmap_calendar: ^1.0.5
   cloud_firestore: ^4.16.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
